switch project to Java 6